Update box_setup.sh