@@ -160,19 +160,12 @@ personalizar(){
   #echo -e "orlandosalvadorcamarillomoreno@gmail.com\nOrlando\nCamarillo" | dspace
   #/dspace/bin/dspace  create-administrator 
 
-<<<<<<< HEAD:setup/box_setup.sh
     echo "---------------apuntar tomcat a  los archivos de personalización de interfaz"
     sudo sed -i 's|appBase="webapps"|appBase="/home/vagrant/install/webapps"|g' /etc/tomcat7/server.xml
     echo "-----------------------------------/n-------------/n---------------------aumentando memoria "
     sudo sed -i 's|JAVA_OPTS="-Djava.awt.headless=true |#JAVA_OPTS="-Xmx1024m -Dfile.encoding=UTF-8"|g' /etc/default/tomcat7
     sudo echo "JAVA_OPTS=\"-Djava.awt.headless=true -Dfile.encoding=UTF-8 -server -Xms512m -Xmx512m -XX:NewSize=512m -XX:MaxNewSize=512m -XX:PermSize=512m -XX:MaxPermSize=512m -XX:+DisableExplicitGC\"">>/etc/default/tomcat7
-=======
-    echo "--------------- Copiar los archivos de personalización de interfaz"
-    sudo sed -i 's|appBase="webapps"|appBase="/dspace/webapps"|g' /etc/tomcat7/server.xml
-    echo "-----------------------------------/n-------------/n---------------------aumentando memoria "
-    sudo sed -i 's|JAVA_OPTS="-Djava.awt.headless=true |#JAVA_OPTS="-Xmx1024m -Dfile.encoding=UTF-8"|g' /etc/default/tomcat7
-    sudo echo "JAVA_OPTS=\"-Dfile.encoding=UTF-8 -server -Xms1536m -Xmx1536m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:PermSize=512m -XX:MaxPermSize=1024m -XX:+DisableExplicitGC\"">>/etc/default/tomcat7
->>>>>>> 0f7c3d69ebd509c2c51c5f587fc3e17b5eac16ac:bin/box_setup.sh
+
 
   echo "--------------- Reiniciar tomcat"
 
